# NodeBrain

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml
BrainEditor/: CMakeLists.txt
BrainEditor/Assets/Shaders/: flatColor.comp  gradient.comp  gradient2.comp  gradientColor.comp  quad.frag  quad.vert  triangle.vert  triangle2.vert
BrainEditor/Assets/Shaders/Compiled/: flatColor.comp.spv  gradient.comp.spv  gradient2.comp.spv  gradientColor.comp.spv  quad.frag.spv  quad.vert.spv  triangle.vert.spv  triangle2.vert.spv
BrainEditor/src/: BrainEditor.cpp  BrainEditor.h  main.cpp
BrainEditor/src/Panels/: EntityGraphPanel.cpp  EntityGraphPanel.h  SceneGraphPanel.cpp  SceneGraphPanel.h
NodeBrain/: CMakeLists.txt
NodeBrain/include/NodeBrain/: NodeBrain.h
NodeBrain/src/: NBpch.cpp  NBpch.h  NodeBrain.cpp  NodeBrain.h  TestClass.cpp  TestClass.h  nbpch.cpp  nbpch.h
NodeBrain/src/Core/: App.cpp  App.h  Event.h  ImGuiBackends.cpp  ImGuiLayer.cpp  ImGuiLayer.h  Input.cpp  Input.h  Instrumentor.cpp  Instrumentor.h  KeyCode.h  Layer.h  Log.cpp  Log.h  Ref.h  Timer.h  UUID.cpp  UUID.h  Window.cpp  Window.h
NodeBrain/src/GAPI/Vulkan/: ValidationLayer.cpp  ValidationLayer.h  VulkanAllocator.cpp  VulkanAllocator.h  VulkanCommandBuffer.cpp  VulkanCommandBuffer.h  VulkanCommandPool.cpp  VulkanCommandPool.h  VulkanComputePipeline.cpp  VulkanComputePipeline.h  VulkanDescriptorLayout.cpp  VulkanDescriptorLayout.h  VulkanDescriptorPool.cpp  VulkanDescriptorPool.h  VulkanDescriptorSet.cpp  VulkanDescriptorSet.h  VulkanDevice.cpp  VulkanDevice.h  VulkanFramebuffer.cpp  VulkanFramebuffer.h  VulkanGraphicsPipeline.cpp  VulkanGraphicsPipeline.h  VulkanImGuiLayer.cpp  VulkanImGuiLayer.h  VulkanImage.cpp  VulkanImage.h  VulkanIndexBuffer.cpp  VulkanIndexBuffer.h  VulkanPhysicalDevice.cpp  VulkanPhysicalDevice.h  VulkanPipelineLayout.cpp  VulkanPipelineLayout.h  VulkanRenderContext.cpp  VulkanRenderContext.h  VulkanRenderPass.cpp  VulkanRenderPass.h  VulkanRendererAPI.cpp  VulkanRendererAPI.h  VulkanShader.cpp  VulkanShader.h  (+16 more)
NodeBrain/src/Renderer/: CommandBuffer.cpp  CommandBuffer.h  CommandPool.cpp  CommandPool.h  ComputePipeline.cpp  ComputePipeline.h  DescriptorSet.cpp  DescriptorSet.h  EditorCamera.cpp  EditorCamera.h  Framebuffer.cpp  Framebuffer.h  GraphicsPipeline.cpp  GraphicsPipeline.h  Image.cpp  Image.h  IndexBuffer.cpp  IndexBuffer.h  PipelineConfiguration.h  PipelineData.h  PipelineLayout.cpp  PipelineLayout.h  RenderContext.cpp  RenderContext.h  RenderPass.cpp  RenderPass.h  Renderer.cpp  Renderer.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  Texture2D.cpp  Texture2D.h  UniformBuffer.cpp  UniformBuffer.h  VertexBuffer.cpp  VertexBuffer.h
NodeBrain/src/Scene/: Component.h  Entity.h  EntityGraph.cpp  EntityGraph.h  Node.h  Scene.cpp  Scene.h
NodeBrain/src/Scene/Nodes/: ComponentNodes.h  MathNodes.h  Node.h  TypeNodes.h
NodeBrain/src/Utils/: FileUtils.cpp  FileUtils.h
Test/: CMakeLists.txt
Test/src/Core/: Test_App.cc  Test_Event.cc  Test_Timer.cc  Test_Window.cc
test/: CMakeLists.txt  memcheck_x64.sh  valgrind.suppressions
test/Core/: Test_App.cc  Test_Input.cc  Test_Timer.cc  Test_Window.cc
